--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "make-error": "^1.0.4",
     "nconf": "^0.8.1",
     "nodemon": "^1.8.1",
+    "postcss-load-config": "^1.2.0",
     "postcss-loader": "^1.1.0",
     "ramda": "^0.23.0",
     "raven-js": "^3.0.3",
