Introduce loan calculator component
Including loan slider component

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "postcss-loader": "^1.1.0",
     "ramda": "^0.23.0",
     "raven-js": "^3.0.3",
+    "rc-slider": "^6.1.2",
     "react": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.4.1",
